--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -8,6 +8,8 @@ pool:
 
 steps:
   - script: |
-      docker build -t deamon.azurecr.io/nginx:$(Build.BuildId) .
+      az login --tenant ramsumanthoutlook.onmicrosoft.com
       docker login deamon.azurecr.io -u deamon -p 7CrYf4nosXrPZn2fwztHE1jUdj6fOgM+9Y6PxwpUh2+ACRAzpAjH
-      docker push deamon.azurecr.io/nginx:$(Build.BuildId)
+      docker pull nginx
+      docker tag nginx deamon.azurecr.io/demo/nginxv2
+      docker push deamon.azurecr.io/demo/nginxv2
