Update azure-pipeline.yml for Azure Pipelines

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -45,3 +45,4 @@ stages:
        - task: ManualIntervention@8
          inputs:
            instructions: 'Approval for production Deployment'
+           emailRecipients: 'Please approve the build'
