--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -28,22 +28,29 @@ stages:
       eq(variables['Build.ScourceBranch'], 'refs/heads/main')
     )
   jobs:
-    - job: Build
-      steps:
-      - script: |
+   - deployment: DeploymentJob
+     displayName: 'Deployment'
+     pool:
+       vmImage: 'ubuntu-latest'
+     environment:'Production'
+     strategy:
+      runOnce:
+       deploy:
+        steps:    
+        - script: |
           az login --tenant ramsumanthoutlook.onmicrosoft.com
           docker login deamon.azurecr.io -u deamon -p 7CrYf4nosXrPZn2fwztHE1jUdj6fOgM+9Y6PxwpUh2+ACRAzpAjH
           docker pull nginx
           docker tag nginx deamon.azurecr.io/prod/nginxv1
           docker push deamon.azurecr.io/prod/nginxv1
-    - job: Approval
-      displayName: 'Approval'
-      dependsOn: Build
-      condition: eq(variables['Build.SourceBranch'], 'ref/heads/main')
-      timeoutInMinutes: 4320
-      steps:
-       - task: ManualValidation@0
-         inputs:
+   - job: Approval
+     displayName: 'Approval'
+     dependsOn: Build
+     condition: eq(variables['Build.SourceBranch'], 'ref/heads/main')
+     timeoutInMinutes: 4320
+     steps:
+      - task: ManualValidation@0
+        inputs:
            notifyUsers: 'aryasourav.satapathy@ab-inbev.com'
            instructions: 'Approval for production Deployment'
            onTimeout: reject
