--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -19,38 +19,41 @@ stages:
           docker tag nginx deamon.azurecr.io/demo/nginxv4
           docker push deamon.azurecr.io/demo/nginxv4
 
-- stage: Prod
+
+- stage: Production
   displayName: 'Production'
   dependsOn: Dev
   condition: |
     and(
       succeeded('Dev'),
-      eq(variables['Build.ScourceBranch'], 'refs/heads/main')
+      eq(variables['Build.SourceBranch'], 'refs/heads/main')
     )
   jobs:
-   - deployment: DeploymentJob
-     displayName: 'Deployment'
-     pool:
-       vmImage: 'ubuntu-latest'
-     environment:'Production'
-     strategy:
-      runOnce:
-       deploy:
-        steps:    
-        - script: |
-          az login --tenant ramsumanthoutlook.onmicrosoft.com
-          docker login deamon.azurecr.io -u deamon -p 7CrYf4nosXrPZn2fwztHE1jUdj6fOgM+9Y6PxwpUh2+ACRAzpAjH
-          docker pull nginx
-          docker tag nginx deamon.azurecr.io/prod/nginxv1
-          docker push deamon.azurecr.io/prod/nginxv1
-   - job: Approval
-     displayName: 'Approval'
-     dependsOn: Build
-     condition: eq(variables['Build.SourceBranch'], 'ref/heads/main')
-     timeoutInMinutes: 4320
-     steps:
-      - task: ManualValidation@0
-        inputs:
-           notifyUsers: 'aryasourav.satapathy@ab-inbev.com'
-           instructions: 'Approval for production Deployment'
-           onTimeout: reject
+    - deployment: DeploymentJob
+      displayName: 'Deployment'
+      pool:
+        vmImage: 'ubuntu-latest'  # Choose an appropriate agent image
+      environment: 'Production'  # Replace with your target environment
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+              - script: |
+                  az login --tenant ramsumanthoutlook.onmicrosoft.com
+                  docker login deamon.azurecr.io -u deamon -p 7CrYf4nosXrPZn2fwztHE1jUdj6fOgM+9Y6PxwpUh2+ACRAzpAjH
+                  docker pull nginx
+                  docker tag nginx deamon.azurecr.io/prod/nginxv1
+                  docker push deamon.azurecr.io/prod/nginxv1
+
+    - job: Approval
+      displayName: 'Approval'
+      dependsOn: DeploymentJob
+      condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
+      timeoutInMinutes: 4320  # Adjust timeout as needed
+      steps:
+        - task: ManualValidation@0
+          inputs:
+            notifyUsers: |
+              aryasourav.satapathy@ab-inbev.com
+            instructions: 'Approval for production deployment'
+            onTimeout: 'reject'
