Update azure-pipeline.yml for Azure Pipelines

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -48,6 +48,7 @@ stages:
     - job: Approval
       displayName: 'Approval'
       dependsOn: DeploymentJob
+      pool: server
       condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
       timeoutInMinutes: 4320  # Adjust timeout as needed
       steps:
